Fixing bug: Circle in project description not showing properly.

--- a/style.css
+++ b/style.css
@@ -128,7 +128,9 @@ border-radius: 15px;
     
     background-color: wheat;
     padding: 20px;
-    border-radius: 180px;
+    border-radius: 50%;
+
+    
 
     
 
